--- a/SAE2/Base.lproj/Main.storyboard
+++ b/SAE2/Base.lproj/Main.storyboard
@@ -27,7 +27,7 @@
         <!--Flux-->
         <scene sceneID="pcu-df-3wF">
             <objects>
-                <viewController id="acS-lx-jnS" sceneMemberID="viewController">
+                <viewController id="acS-lx-jnS" customClass="FluxViewController" customModule="SAE2" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="zrt-94-hIW">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
